--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -15,11 +15,10 @@
   }
 
   &__field {
+    display: flex;
+    gap: 1rem;
     max-width: 300px;
-    height: 36px;
     margin: auto;
-    border-radius: 3px;
-    border: 1px solid $primaryColor;
   }
 
   &__input {
@@ -64,8 +63,8 @@
   }
 
   &__error {
-    min-height: 2rem;
-    height: auto;
+    //min-height: 2rem;
+    //height: auto;
 
     &__message {
       height: auto;
@@ -76,7 +75,9 @@
   }
 
   &__history {
-    font-size: 12px;
+    max-width: 300px;
+    margin: auto;
+    //font-size: 12px;
   }
 
   &__history-item {
