--- a/src/utils/_normalize.scss
+++ b/src/utils/_normalize.scss
@@ -4,12 +4,13 @@ html {
   font-style: normal;
   font-size: 15px;
   scroll-behavior: smooth;
+
+  overflow-x: hidden;
+  margin-right: calc(-1*(100vw - 100%));
 }
 
 body {
   margin: 0;
-  overflow-y: scroll;
-
 }
 
 code {
